// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MitochondrialRegionCoverageTrack with dataset gnomad_cnv_r4 queries with appropriate params 1`] = `
<mockConstructor
  errorMessage="Unable to load coverage"
  loadingMessage="Loading coverage"
  loadingPlaceholderHeight={220}
  operationName="MitochondrialCoverageInRegion"
  query="
query MitochondrialCoverageInRegion($start: Int!, $stop: Int!, $datasetId: DatasetId!, $referenceGenome: ReferenceGenomeId!) {
  region(chrom: "M", start: $start, stop: $stop, reference_genome: $referenceGenome) {
    mitochondrial_coverage(dataset: $datasetId) {
      pos
      mean
      median
      over_100
      over_1000
    }
  }
}
"
  success={[Function]}
  variables={
    {
      "datasetId": "gnomad_cnv_r4",
      "referenceGenome": "GRCh38",
      "start": 123,
      "stop": 456,
    }
  }
>
  [Function]
</mockConstructor>
`;

exports[`MitochondrialRegionCoverageTrack with dataset gnomad_r4 queries with appropriate params 1`] = `
<mockConstructor
  errorMessage="Unable to load coverage"
  loadingMessage="Loading coverage"
  loadingPlaceholderHeight={220}
  operationName="MitochondrialCoverageInRegion"
  query="
query MitochondrialCoverageInRegion($start: Int!, $stop: Int!, $datasetId: DatasetId!, $referenceGenome: ReferenceGenomeId!) {
  region(chrom: "M", start: $start, stop: $stop, reference_genome: $referenceGenome) {
    mitochondrial_coverage(dataset: $datasetId) {
      pos
      mean
      median
      over_100
      over_1000
    }
  }
}
"
  success={[Function]}
  variables={
    {
      "datasetId": "gnomad_r4",
      "referenceGenome": "GRCh38",
      "start": 123,
      "stop": 456,
    }
  }
>
  [Function]
</mockConstructor>
`;

exports[`MitochondrialRegionCoverageTrack with dataset gnomad_sv_r4 queries with appropriate params 1`] = `
<mockConstructor
  errorMessage="Unable to load coverage"
  loadingMessage="Loading coverage"
  loadingPlaceholderHeight={220}
  operationName="MitochondrialCoverageInRegion"
  query="
query MitochondrialCoverageInRegion($start: Int!, $stop: Int!, $datasetId: DatasetId!, $referenceGenome: ReferenceGenomeId!) {
  region(chrom: "M", start: $start, stop: $stop, reference_genome: $referenceGenome) {
    mitochondrial_coverage(dataset: $datasetId) {
      pos
      mean
      median
      over_100
      over_1000
    }
  }
}
"
  success={[Function]}
  variables={
    {
      "datasetId": "gnomad_sv_r4",
      "referenceGenome": "GRCh38",
      "start": 123,
      "stop": 456,
    }
  }
>
  [Function]
</mockConstructor>
`;

exports[`MitochondrialRegionCoverageTrack with dataset ourdna has no unexpected changes 1`] = `
<div
  className="StatusMessage-sc-1sbph57-0 cveMMu"
>
  Mitochondrial genome coverage is not available in 
  OurDNA v1.0
</div>
`;
